// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test grade table reducer should handle DISPLAY_EXAM_TABLE 1`] = `
Object {
  "classroom": null,
  "classroomDropdown": false,
  "exams": Array [
    Object {
      "_id": "ueeNxOkl32Ry2kGF",
      "createdAt": Object {
        "$$date": 1543663446602,
      },
      "date": "11/11/2019",
      "subjectId": "dh667zZh748JnNn",
      "title": "BIO EXAM",
      "updatedAt": Object {
        "$$date": 1543663446602,
      },
      "weight": 1,
    },
  ],
  "grades": Array [
    Object {
      "_id": "zupNxOkl87RyKLMJ",
      "createdAt": Object {
        "$$date": 1543663876602,
      },
      "date": "11/11/2019",
      "examId": "ueeNxOkl32Ry2kGF",
      "grade": 3,
      "studentId": "kkhNH7HNFDCvR5R",
      "updatedAt": Object {
        "$$date": 1543663876602,
      },
      "weight": 1,
    },
  ],
  "subDrop": true,
  "subjectId": "dh667zZh748JnNn",
  "subjectName": "Biology",
}
`;

exports[`test grade table reducer should handle OPEN_CLASS_LIST 1`] = `
Object {
  "classroom": "Class 2",
  "classroomDropdown": true,
  "subDrop": false,
  "subjectName": null,
}
`;

exports[`test grade table reducer should handle UPDATE_EXAM_TABLE 1`] = `
Object {
  "classroom": null,
  "classroomDropdown": false,
  "exams": Array [
    Object {
      "_id": "ueeNxOkl32Ry2kGF",
      "createdAt": Object {
        "$$date": 1543663446602,
      },
      "date": "11/11/2019",
      "subjectId": "dh667zZh748JnNn",
      "title": "BIO EXAM",
      "updatedAt": Object {
        "$$date": 1543663446602,
      },
      "weight": 1,
    },
  ],
  "grades": Array [
    Object {
      "_id": "zupNxOkl87RyKLMJ",
      "createdAt": Object {
        "$$date": 1543663876602,
      },
      "date": "11/11/2019",
      "examId": "ueeNxOkl32Ry2kGF",
      "grade": 3,
      "studentId": "kkhNH7HNFDCvR5R",
      "updatedAt": Object {
        "$$date": 1543663876602,
      },
      "weight": 1,
    },
  ],
  "subDrop": false,
  "subjectName": null,
}
`;

exports[`test grade table reducer should use initial state 1`] = `
Object {
  "classroom": null,
  "classroomDropdown": false,
  "subDrop": false,
  "subjectName": null,
}
`;
